# petit-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: interface.md  plan.md  requirements.md
docs/milestone1/: plan.md
src/petit_cli/: main.py
src/petit_cli/commands/: clone_db.py  td2parquet.py  trigger_workflow.py
tests/: conftest.py  test_clone_db.py  test_main.py  test_td2parquet.py  test_trigger_workflow.py
