[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petit-cli"
version = "0.0.1"
description = "Tiny tools for TD data operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=21.0.0",
    "pytd>=2.2.0",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
petit-cli = "petit_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
